--- a/Clover/Clover/Clover.vcxproj.filters
+++ b/Clover/Clover/Clover.vcxproj.filters
@@ -11,11 +11,14 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="server.h">
+    <ClInclude Include="Server.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="Client.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="server.cpp" />
+    <ClCompile Include="Server.cpp" />
   </ItemGroup>
 </Project>
