Add basic mock for client and server

--- a/Clover/Clover/Clover.vcxproj.filters
+++ b/Clover/Clover/Clover.vcxproj.filters
@@ -20,5 +20,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Server.cpp" />
+    <ClCompile Include="Client.cpp" />
   </ItemGroup>
 </Project>
