--- a/Clover/Clover/Clover.vcxproj
+++ b/Clover/Clover/Clover.vcxproj
@@ -127,6 +127,7 @@
     <ClInclude Include="Server.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Client.cpp" />
     <ClCompile Include="Server.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
