Change absolute paths to relative

--- a/Clover/CloverTests/CloverTests.vcxproj
+++ b/Clover/CloverTests/CloverTests.vcxproj
@@ -80,7 +80,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <AdditionalDependencies>Clover.lib;gmock.lib;gmock_main.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>D:\Users\Cindy\Documents\Programmation\2018\clover\Clover\Debug;D:\Users\Cindy\Documents\Programmation\2018\clover\Clover\librairies\gmock\build\x86\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(OutputPath);$(SolutionDir)\librairies\gmock\build\x86\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <ProjectReference>
       <UseLibraryDependencyInputs>false</UseLibraryDependencyInputs>
