Fix tests building

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,10 @@ if (MSVC AND (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER 19.11))
   message("Add flag to disable warings from gtest -  _SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING")
 endif()
 
-set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/src/*/*.h)
+set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/src)
 include_directories(${COMMON_INCLUDES})
 file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/src/*/*.cpp)
-file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
+file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*/*.cpp)
 
 set(CMAKE_CXX_STANDARD 11)
 
@@ -27,15 +27,15 @@ if (BUILD_TESTS)
 	set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 
 	if (CMAKE_VERSION VERSION_LESS 2.8.11)
-		include_directories(BEFORE SYSTEM "${gtest_SOURCE_DIR}/src/*/*.h" "${gmock_SOURCE_DIR}/src/*/*.h")
+		include_directories(BEFORE SYSTEM "${gtest_SOURCE_DIR}/include" "${gmock_SOURCE_DIR}/include")
 	else()
-		target_include_directories(gmock_main SYSTEM BEFORE INTERFACE "${gtest_SOURCE_DIR}/src/*/*.h" "${gmock_SOURCE_DIR}/src/*/*.h")
+		target_include_directories(gmock_main SYSTEM BEFORE INTERFACE "${gtest_SOURCE_DIR}/include" "${gmock_SOURCE_DIR}/include")
 	endif()
 	# TODO : Fix tests building
-	#add_executable(ctest ${TEST_SRC_FILES})
-
-	#target_link_libraries(ctest gmock_main)
-	#target_link_libraries(ctest clover_lib)
+	add_executable(ctest ${TEST_SRC_FILES})
+	
+	target_link_libraries(ctest gmock_main)
+	target_link_libraries(ctest clover_lib)
 
 	add_test(UnitTests ctest)
 
