Add positioncomponent test and fix running tests in vs directly

--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -10,7 +10,7 @@
       "installRoot": "${env.USERPROFILE}\\CMakeBuilds\\${workspaceHash}\\install\\${name}",
       "cmakeCommandArgs": "-DBUILD_TESTS=ON",
       "buildCommandArgs": "-v",
-      "ctestCommandArgs": ""
+      "ctestCommandArgs": "--output-on-failure"
     },
     {
       "name": "x86-Release",
@@ -21,7 +21,7 @@
       "installRoot": "${env.USERPROFILE}\\CMakeBuilds\\${workspaceHash}\\install\\${name}",
       "cmakeCommandArgs": "",
       "buildCommandArgs": "-v",
-      "ctestCommandArgs": ""
+      "ctestCommandArgs": "--output-on-failure"
     },
     {
       "name": "x64-Debug",
@@ -32,7 +32,7 @@
       "installRoot": "${env.USERPROFILE}\\CMakeBuilds\\${workspaceHash}\\install\\${name}",
       "cmakeCommandArgs": "-DBUILD_TESTS=ON",
       "buildCommandArgs": "-v",
-      "ctestCommandArgs": ""
+      "ctestCommandArgs": "--output-on-failure"
     },
     {
       "name": "x64-Release",
@@ -43,7 +43,7 @@
       "installRoot": "${env.USERPROFILE}\\CMakeBuilds\\${workspaceHash}\\install\\${name}",
       "cmakeCommandArgs": "",
       "buildCommandArgs": "-v",
-      "ctestCommandArgs": ""
+      "ctestCommandArgs": "--output-on-failure"
     }
   ]
 }
