Create PaneBuffer to contains all informations. Still need to fix initialization

--- a/Clover/Clover.vcxproj
+++ b/Clover/Clover.vcxproj
@@ -162,6 +162,8 @@
     <ClCompile Include="src\physic\Vector2D.cpp" />
     <ClCompile Include="src\state\State.cpp" />
     <ClCompile Include="src\state\StateMachine.cpp" />
+    <ClCompile Include="src\ui\PaneBuffer.cpp" />
+    <ClCompile Include="src\ui\PaneBuffer.h" />
     <ClCompile Include="src\ui\Pane.cpp" />
     <ClCompile Include="test\integration\Main.cpp" />
   </ItemGroup>
