--- a/Clover/Clover.vcxproj.filters
+++ b/Clover/Clover.vcxproj.filters
@@ -152,5 +152,11 @@
     <ClCompile Include="test\integration\Main.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="src\ui\PaneBuffer.h">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\PaneBuffer.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
