Read basic input from keyboard and gamepad

--- a/Clover/Clover.vcxproj
+++ b/Clover/Clover.vcxproj
@@ -92,6 +92,7 @@
     </ClCompile>
     <Link>
       <Profile>true</Profile>
+      <AdditionalDependencies>Xinput.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
