--- a/Clover/Clover.vcxproj
+++ b/Clover/Clover.vcxproj
@@ -124,6 +124,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\audio\SoundOuput.h" />
     <ClInclude Include="src\core\BaseComponent.h" />
     <ClInclude Include="src\core\BaseEntity.h" />
     <ClInclude Include="src\core\Engine.h" />
@@ -152,6 +153,7 @@
     <ClInclude Include="src\ui\Pane.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\audio\SoundOutput.cpp" />
     <ClCompile Include="src\core\BaseEntity.cpp" />
     <ClCompile Include="src\core\Engine.cpp" />
     <ClCompile Include="src\core\EntityManager.cpp" />
