--- a/Clover/Clover.vcxproj
+++ b/Clover/Clover.vcxproj
@@ -78,7 +78,8 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <Profile>true</Profile>
+      <Profile>false</Profile>
+      <AdditionalDependencies>Xinput.lib;dsound.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -91,7 +92,7 @@
       <AdditionalOptions>-D_SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
-      <Profile>true</Profile>
+      <Profile>false</Profile>
       <AdditionalDependencies>Xinput.lib;dsound.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -107,6 +108,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>Xinput.lib;dsound.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -121,6 +123,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>Xinput.lib;dsound.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -152,6 +155,7 @@
     <ClInclude Include="src\state\State.h" />
     <ClInclude Include="src\state\StateMachine.h" />
     <ClInclude Include="src\ui\Pane.h" />
+    <ClInclude Include="src\ui\PaneBuffer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\audio\SoundOutput.cpp" />
@@ -173,9 +177,8 @@
     <ClCompile Include="src\physic\Vector2D.cpp" />
     <ClCompile Include="src\state\State.cpp" />
     <ClCompile Include="src\state\StateMachine.cpp" />
-    <ClCompile Include="src\ui\PaneBuffer.cpp" />
-    <ClCompile Include="src\ui\PaneBuffer.h" />
     <ClCompile Include="src\ui\Pane.cpp" />
+    <ClCompile Include="src\ui\PaneBuffer.cpp" />
     <ClCompile Include="test\integration\Main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
